--- a/404.html
+++ b/404.html
@@ -2,22 +2,24 @@
 <html lang="en">
   <head>
     <title>
-      Izzy Hendriks
+      404. It found you
     </title>
     <meta charset="utf-8">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="izzyhendriks.com">
+    <meta property="og:title" content="STTL.boo">
     <meta property="og:author" content="Izzy">
-    <meta property="og:description" content="Izzy Hendriks">
+    <meta property="og:description" content="404 error">
     <meta name="viewport" content="width=device-width">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/progress_sq.jpg">
     <link href="assets/css/main.css" rel="stylesheet">
     <link rel="author" href="humans.txt" />
   </head>
-  
+
   <body>
     <div class="soon">
-      <h1>Izzy Hendriks</h1>
-      <p>coming soon!</p>
+      <h1>404</h1>
+      <p><a href="index.html">back</a>main page</p>
     </div>
   </body>
+
 </html>
