Added robots, content

--- a/credits.html
+++ b/credits.html
@@ -9,6 +9,7 @@
     <meta property="og:title" content="izzyhendriks.com">
     <meta property="og:author" content="Izzy Hendriks">
     <meta property="og:description" content="Izzy Hendriks">
+    <meta name="robots" content="noindex,nofollow,noarchive">
     <meta name="viewport" content="width=device-width">
     <link href="assets/css/main.css" rel="stylesheet">
     <link rel="author" href="humans.txt" />
