--- a/index_copy.html
+++ b/index_copy.html
@@ -59,7 +59,7 @@
       <h2 id="education">Education</h2>
 
         <p><b>University of Massachusetts, Amherst</b><br />
-        <i>(Research) master's in electrical engineering<br />
+        <i>Research master's in electrical engineering<br />
         Specialization in weather radar engineering<br />
         Graduated 2014</i></p>
         <p>Along with coursework in electromagnetism and RF electronics, I helped build and deploy an X-band radar during the storm season in Texas. My thesis was about this campaign and processing and comparing this data with other local radars. I also helped teach [electronics classes](link to YouTube? Download this video?).</p>
