--- a/index_copy.html
+++ b/index_copy.html
@@ -10,7 +10,7 @@
     <meta property="og:author" content="Izzy Hendriks">
     <meta property="og:description" content="Izzy Hendriks">
     <meta name="robots" content="noindex,nofollow,noarchive">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=750, initial-scale=1.0">
     <link href="assets/css/main.css" rel="stylesheet">
     <link rel="author" href="humans.txt" />
   </head>
