Fixing bad humanstxt logo

--- a/index_copy.html
+++ b/index_copy.html
@@ -81,8 +81,8 @@
           
       <p class="center">
         <a href="https://nl-rse.org/" target="_blank"><img src="assets/images/rse.jpg" class="round" height="75px"></a><br />
-        <img src="assets/images/created_by_human.png" height="30px">
-        <a href="humans.txt"><img src="assets/images/humanstxt.gif" class="round" height="30px"></a>
+        <img src="assets/images/created_by_human.png" height="25px">
+        <a href="humans.txt"><img src="assets/images/humanstxt.png" class="round" height="25px"></a>
       </p>
 
       <p class="tiny">© 2025 Izzy Hendriks - <a href="credits.html">credits</a></p>
