Got rid of markdown links

--- a/index_copy.html
+++ b/index_copy.html
@@ -62,13 +62,13 @@
         <i>Research master's in electrical engineering<br />
         Specialization in weather radar engineering<br />
         Graduated 2014</i></p>
-        <p>Along with coursework in electromagnetism and RF electronics, I helped build and deploy an X-band radar during the storm season in Texas. My thesis was about this campaign and processing and comparing this data with other local radars. I also helped teach [electronics classes](link to YouTube? Download this video?).</p>
+        <p>Along with coursework in electromagnetism and RF electronics, I helped build and deploy an X-band radar during the storm season in Texas. My thesis was about this campaign and processing and comparing this data with other local radars. I also helped teach electronics classes.</p>
 
         <p><b>Smith College</b><br />
         <i>Bachelor's in religion and astrophysics<br />
         Specialization in Buddhist studies, honors in liberal arts<br />
         Graduated 2012</i></p>
-        <p>Taking the full spectrum of liberal arts classes and then some, my coursework focused on critical thinking and solid scientific and mathematical skills. Through summer internships with the astronomy department, I [published a paper](link to paper?) on star formation using data from an infrared space telescope. I learned my first programming language, IDL, and was a teaching assistant for astronomy and physics classes.</p>
+        <p>Taking the full spectrum of liberal arts classes and then some, my coursework focused on critical thinking and solid scientific and mathematical skills. Through summer internships with the astronomy department, I published a paper on star formation using data from an infrared space telescope. I learned my first programming language, IDL, and was a teaching assistant for astronomy and physics classes.</p>
 
       <h2 id="about">About me</h2>
         <p>I grew up in rural Massachusetts, USA, going for walks in the woods and renting Cosmos from the local library. After graduating, I moved to the Netherlands to live with my wife. My wife is a Classicist and tutor, and makes sure I remain critical of the past and current events. I enjoy reading about history, mostly antiquity, the Silk Road, and syncretism. I also enjoy a good science fiction novel; the more robots in space, the better!</p>
@@ -77,7 +77,7 @@
         <p>I knit and Geocache, but most of my free time is spent hanging out on the couch with my wife and friends, eating good food and watching television and generally enjoying my 30's.</p>
 
       <h2 id="contact">Contact</h2>
-        <p>I don't have a social media presence, but I look forward to your email: <a href="&#x6d;ailto&#58;izzy&#x40;izzyhendriks&#46;com">izzy&#x40;izzyhendriks&#46;com</a>.</p>
+        <p>I don't have a social media presence, but I look forward to your email: <a href="&#x6d;ailto&#58;izzy&#x40;izzyhendriks&#46;com">izzy&#x40;izzyhendriks&#46;com</a>. Details about and links to above work, as well as references, are available upon request.</p>
           
       <p class="center">
         <a href="https://nl-rse.org/" target="_blank"><img src="assets/images/rse.jpg" class="round" height="75px"></a><br />
