Finishing touches i hope

--- a/index_copy.html
+++ b/index_copy.html
@@ -21,9 +21,9 @@
 
       <img src="assets/images/me.png" class="circle" alt="Icon representing Izzy. They have short red hair pulled up into a bun, white skin, blue eyes, and freckles. They have ear piercings and are wearing a red flannel over a black shirt.">
 
-      <p><b>ir. Izzy Hendriks</b></p>
+      <p><b>Izzy Hendriks, MSc</b></p>
       <p class="top">
-      <i>they/them/themself</i><br />
+      <i>they or she</i><br />
       Utrecht, the Netherlands<br />
       <a href="&#x6d;ailto&#58;izzy&#x40;izzyhendriks&#46;com">izzy&#x40;izzyhendriks&#46;com</a></p>
 
@@ -80,9 +80,10 @@
         <p>I don't have a social media presence, but I look forward to your email: <a href="&#x6d;ailto&#58;izzy&#x40;izzyhendriks&#46;com">izzy&#x40;izzyhendriks&#46;com</a>. Details about and links to above work, as well as references, are available upon request.</p>
           
       <p class="center">
+        <img src="assets/images/progress.png" height="30px"><br />
         <a href="https://nl-rse.org/" target="_blank"><img src="assets/images/rse.jpg" class="round" height="75px"></a><br />
-        <img src="assets/images/created_by_human.png" height="25px">
-        <a href="humans.txt"><img src="assets/images/humanstxt.png" class="round" height="25px"></a>
+        <a href="https://notbyai.fyi/" target="_blank"><img src="assets/images/created_by_human.png" height="25px"></a><br />
+        <a href="humans.txt"><img src="assets/images/humanstxt.png" class="round" height="25px"></a><br />
       </p>
 
       <p class="tiny">© 2025 Izzy Hendriks - <a href="credits.html">credits</a></p>
