Pushing to production yay

--- a/credits.html
+++ b/credits.html
@@ -28,7 +28,7 @@
 
       <p>I made my first website on Geocities. I've learned a lot since then, but this page was lovingly hand-coded.</p>
 
-      <p class="tiny">© 2025 Izzy Hendriks - <a href="index.html">back</a></p>
+      <p class="tiny">© 2025 Izzy Hendriks - <a href="https://izzyhendriks.com/">back</a></p>
       
     </div>
   </body>
