--- a/index.html
+++ b/index.html
@@ -7,17 +7,95 @@
     <meta charset="utf-8">
     <meta property="og:type" content="website">
     <meta property="og:title" content="izzyhendriks.com">
-    <meta property="og:author" content="Izzy">
+    <meta property="og:author" content="Izzy Hendriks">
     <meta property="og:description" content="Izzy Hendriks">
+    <meta name="robots" content="noindex,nofollow,noarchive">
     <meta name="viewport" content="width=device-width">
     <link href="assets/css/main.css" rel="stylesheet">
     <link rel="author" href="humans.txt" />
   </head>
   
   <body>
-    <div class="soon">
-      <h1>Izzy Hendriks</h1>
-      <p>coming soon!</p>
-    </div>
+    <div class="holder">
+
+      <nav>
+        <div class="sidebar">
+
+          <img src="assets/images/me.png" class="circle" width="150px" alt="Icon representing Izzy. They have red hair, blue eyes, and freckles, and are wearing a red flannel.">
+
+          <p><b>Izzy Hendriks, MSc</b></p>
+          <p class="top">
+          <i>they or she</i><br />
+          Utrecht, the Netherlands<br />
+          <a href="&#x6d;ailto&#58;izzy&#x40;izzyhendriks&#46;com">izzy&#x40;izzyhendriks&#46;com</a></p>
+
+          <div class="contents">
+            <p><hr></p>
+            <p><b>On this page:</b><br />
+            <a href="#work_ethic">Work ethic</a><br />
+            <a href="#work_experience">Work experience</a><br />
+            <a href="#education">Education</a><br />
+            <a href="#about">About me</a><br />
+            <a href="#contact">Contact</a></p>
+          </div> <!-- end contents -->
+
+        </div> <!-- end sidebar -->
+      </nav>
+
+      <main>
+
+        <div class="main">
+
+          <h1>Hi! I'm Izzy.</h1>
+            <p>I'm a research software engineer with a solid background in science and humanities and over ten years' experience.</p>
+
+          <h2 id="work_ethic">Work ethic</h2>
+            <p>I'm not a "move fast and break things" kind of person; I prefer "play, ask questions, and be kind." I'm brave enough to be dumb and I'm smart enough to ask someone. I start with the manual and then race into trying things. I like to take things apart to figure out how they work. I prefer writing code that's easy to understand and use, rather than being clever and obtuse. I do meticulous work. I'm optimistic but honest.</p>
+
+          <h2 id="work_experience">Work experience</h2>
+
+            <p><b>KNMI Royal Dutch Meteorological Institute</b><br />
+            <i>Research engineer, 2019-</i></p>
+            <p>This job has me up close and personal with hardware and software. I connect sensors to edge devices to make sure we can speak the same language, and then translate that information back to the KNMI. I program the edge devices, I run servers to collect the data, and I analyze what's come in for accuracy and completeness. I manage the R&D electronics lab and the KNMI's test field in De Bilt. I share responsibilities in a small team using git and scrumban. My toolkit requires any combination of embedded software, Python scripts, Linux, databases, networks, practical web pages, weather sensors, and beyond.</p>
+
+            <p><b>Metasensing BV</b><br />
+            <i>Radar engineer, 2015-2019</i></p>
+            <p>I was involved in airborne and ground-based radar building and testing, including maintaining codebase and manuals, as well as going on campaigns.</p>
+
+          <h2 id="education">Education</h2>
+
+            <p><b>University of Massachusetts, Amherst</b><br />
+            <i>Research master's in electrical engineering<br />
+            Specialization in weather radar engineering<br />
+            Graduated 2014</i></p>
+            <p>Along with coursework in electromagnetism and RF electronics, I helped build and deploy an X-band radar during the storm season in Texas. My thesis was about this campaign and processing and comparing this data with other local radars. I also helped teach electronics classes.</p>
+
+            <p><b>Smith College</b><br />
+            <i>Bachelor's in religion and astrophysics<br />
+            Specialization in Buddhist studies, honors in liberal arts<br />
+            Graduated 2012</i></p>
+            <p>Taking the full spectrum of liberal arts classes and then some, my coursework focused on critical thinking and solid scientific and mathematical skills. Through summer internships with the astronomy department, I published a paper on star formation using data from an infrared space telescope. I learned my first programming language, IDL, and was a teaching assistant for astronomy and physics classes.</p>
+
+          <h2 id="about">About me</h2>
+            <p>I grew up in rural Massachusetts, USA, going for walks in the woods and renting Cosmos from the local library. After graduating, I moved to the Netherlands to live with my wife. My wife is a Classicist and tutor, and makes sure I remain critical of the past and current events. I enjoy reading about history, mostly antiquity, the Silk Road, and syncretism. I also enjoy a good science fiction novel; the more robots in space, the better!</p>
+            <p>I have been making music since I was a kid, both professionally and in hobby choirs. I am part of a queer choir in Utrecht that focuses on community and the joy of singing.</p>
+            <p>In my free time, I like working on my home network of a couple of Raspberry Pi's taped together. I am passionate about internet security and privacy, and prefer locally-hosted services: Home Assistant, Nextcloud, and Jellyfin are all part of my system.</p>
+            <p>I knit and Geocache, but most of my free time is spent hanging out on the couch with my wife and friends, eating good food and watching television, and generally enjoying my 30's.</p>
+
+          <h2 id="contact">Contact</h2>
+            <p>I don't have a social media presence, but I look forward to your email: <a href="&#x6d;ailto&#58;izzy&#x40;izzyhendriks&#46;com">izzy&#x40;izzyhendriks&#46;com</a>. Details about and links to above work, as well as references, are available upon request.</p>
+              
+          <p class="center">
+            <img src="assets/images/progress.png" height="30px" alt="Progress pride flag in teh shape of a heart."><br />
+            <a href="https://nl-rse.org/" target="_blank"><img src="assets/images/rse.jpg" class="round" height="75px" alt="NL RSE logo."></a><br />
+            <a href="https://notbyai.fyi/" target="_blank"><img src="assets/images/created_by_human.png" height="25px" alt="Created by human, not by AI."></a><br />
+            <a href="humans.txt"><img src="assets/images/humanstxt.png" class="round" height="25px" alt="Humans.txt available."></a><br />
+          </p>
+
+          <p class="tiny">© 2025 Izzy Hendriks - <a href="credits.html">credits</a></p>
+
+        </div> <!-- end main div -->
+      </main>
+    </div> <!-- end holder -->
   </body>
 </html>
